modeling the html

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,13 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no" />
+  <link href="//fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/x-icon" href="img/github-logo-5F384D0265-seeklogo.com.png" />
+  <script src="https://kit.fontawesome.com/c0b874b18b.js" crossorigin="anonymous"></script>
+  <title>Git Wireframe</title>
+  <link rel="stylesheet" href="/Wireframe/css/style.css">
+</head>
+
+<body>
+  <header>
+      <h1>Git and uses</h1>
+  </header>
+  <main>
+    <section class="hero">
+      <div class="img-hero">
+      </div>
+      <h2>What is Git</h2>
+      <p class="overlay">
+        Are you interested in a career as a web developer but are not sure how to start preparing for it? We have you
+        covered!
+        Web developers perform important functions, like creating websites, maintaining the back-end of applications and
+        running tests, to ensure sites' continued functionality. A role as a junior developer can be a great way to
+        learn
+        the basics of the industry and begin a career in website development. If you're interested in becoming a junior
+        developer, it's helpful to learn more about the position and the steps needed to begin your career.
+      </p>
+      <button></button>
+    </section >
+    <section class="wrapper">
+      <article class="wrapper left">
+        <h2>What is Git</h2>
+        <p>
+          Are you interested in a career as a web developer but are not sure how to start preparing for it? We have you
+          covered!
+          Web developers perform important functions, like creating websites, maintaining the back-end of applications
+          and
+          running tests, to ensure sites' continued functionality. A role as a junior developer can be a great way to
+          learn
+          the basics of the industry and begin a career in website development. If you're interested in becoming a
+          junior
+          developer, it's helpful to learn more about the position and the steps needed to begin your career.
+        </p>
+        <button class="btn-article"></button>
+      </article>
+
+      <article class="wrappe-right">
+        <h2>What is Git</h2>
+        <p>
+          Are you interested in a career as a web developer but are not sure how to start preparing for it? We have you
+          covered!
+          Web developers perform important functions, like creating websites, maintaining the back-end of applications
+          and
+          running tests, to ensure sites' continued functionality. A role as a junior developer can be a great way to
+          learn
+          the basics of the industry and begin a career in website development. If you're interested in becoming a
+          junior
+          developer, it's helpful to learn more about the position and the steps needed to begin your career.
+        </p>
+        <button></button>
+      </article>
+    </section>
+  </main>
+  <footer class="data">
+    <p class="media-text">&copy Karla Grajales <i class="fa-regular fa-face-laugh-wink"></i></p>
+    <div class="social">
+      <a class="facebook" href="https://www.facebook.com/groups/front.designer"><i
+          class="fa-brands fa-facebook"></i></a>
+      <a class="twitter" href="https://twitter.com/explore"><i class="fa-brands fa-twitter"></i></a>
+      <a class="youtube" href="https://www.youtube.com/watch?v=puLSsuG1YE4"><i class="fa-brands fa-youtube"></i></a>
+      <a class="instagram" href="https://www.instagram.com/victorroblesweb/"><i class="fa-brands fa-instagram"></i></a>
+      <a class="github" href="https://github.com/karlagLuna"><i class="fa-brands fa-github"></i></a>
+  </footer>
 </body>
+
 </html
