--- a/Cakes-Co/index.html
+++ b/Cakes-Co/index.html
@@ -33,10 +33,9 @@
       <section class="p-sec">
         <h1>Welcome</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae
-          voluptatem accusantium, necessitatibus cum accusamus, id cumque harum
-          voluptates ipsum nisi vero illo dolore! Doloribus, quae hic. Facilis
-          voluptate nobis eum.
+          we believe that every celebration deserves a cake that is as unique and special as the occasion itself.
+          No matter the occasion, our skilled bakers are here to bring your cake dream to life! 
+          we offer a wide range of flavors and designs to suit your needs.  
         </p>
       </section>
       <section class="hero-sec">
