Chainging the title of the page

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,31 +3,36 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
+    <title>Git and Github Fundamentals</title>
     <link rel="stylesheet" href="css/style.css" />  
   </head>
   <body>
     <header>
       <article>
       <h1>What is Git?</h1>
-      </article>
-        <article><p>
+        <p>
           Git is a distributed version control system that allows developers to
           track changes in their code and collaborate on projects efficiently.
           It enables multiple contributors to work on the same project
           simultaneously while keeping a complete history of changes, making it
           easy to revert to previous versions if needed.
         </p>
+      </article>
+      <article>
         <h1>Why do developers need Git?</h1>
         <p>
           Git supports branching and merging, allowing developers to experiment
           with new features without affecting the main codebase. Its
           decentralized nature means that every contributor has a full copy of
           the repository, enhancing collaboration and minimizing the risk of
-          data loss.
-        </p></article>
+          data loss.</p>
+      </article>
+      <article>
+        <h1>What is a branch in Git?</h1>
+        <p> In Git, a branch is a new/separate version of the main repository.</p>
+      </article>
     </header>
-</body>
+  </body> 
 
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
