Completing the Articles sections
Completing the sections for Articles 1, 2 and 3

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -38,28 +38,23 @@
     </article>
 
     <div id="other-article-title">
-      <article>
+      <article class="article-two-three-width">
         <h2>Why do developers need Git?</h2>
         <p>
-          Developers
+          Developers need Git because it helps with source code management and collaboration. Git allows multiple developers to work on a project simultaneously. Git tracks changes to files, including who made them and when. <br>This allows developers to manage multiple versions of a project and revert to previous versions if needed.
         </p>
         <a href="https://www.atlassian.com/git/tutorials/why-git" target="_blank"><button class="btn-format">Read More</button></a>
       </article>
   
-      <article id="article-three-h2-margin">
+      <article class="article-two-three-width">
         <h2>What is a branch in Git?</h2>
         <p>
-          Branches
+          A branch in Git is simply a lightweight movable pointer to snapshot of changes (commits) in the code base.</p> <p>In Git, there is a special branch (default) which holds the aggregated changes. It is often name master or main. Only changes that have been agreed upon by the team is merged into the main branch. Collaborators/Developers will cut out from main to an experimental/feature branch to their development work.
         </p>
         <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target="_blank"><button class="btn-format">Read More</button></a>
       </article>
 
     </div>
-
-    
-
-    
-
 
   </main>
 
