--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <title>Git Overview</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    
+    <header>
+        <h1>Understanding Git</h1>
+        <p>An introduction to Git, why it's essential for developers, and the concept of branches.</p>
+    </header>
+    <main>
+        <section class="article">
+            <h2>What is Git?</h2>
+            <p>Git is a distributed version control system that helps developers manage and track changes to their code.</p>
+            <a href="#">Learn more</a>
+        </section>
+        <section class="article">
+            <h2>Why Do Developers Need Git?</h2>
+            <p>Git allows developers to collaborate, maintain versions, and backtrack changes efficiently.</p>
+            <a href="#">Learn more</a>
+        </section>
+        <section class="article">
+            <h2>What is a Branch in Git?</h2>
+            <p>A branch in Git allows you to work on different parts of a project without affecting the main codebase.</p>
+            <a href="#">Learn more</a>
+        </section>
+    </main>
+
+    
+    <footer>
+        <p>&copy; 2024 by Your Name. All Rights Reserved.</p>
+    </footer>
 </body>
-</html
+</html>
