Updated form & added to logos

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,11 +13,23 @@
     <h1>Product Pick Form</h1>
   </header>
   <main>
-  <form>
-    <!-- write your html here-->
+  <div class="container">
+  <form action="#" method="get">
+    <fieldset>
+      <legend>Your Details:</legend>
+      <label for="user-name">
+        Name:
+        <input type="text" name="user-name" placeholder="Enter your name" required>
+      </label>
+        <br /><br />
+      <label for="user-email">
+        Email:
+        <input type="email" name="user-email" placeholder="Enter email" required>
+      </label>
+    </div>
+    </fieldset>
     <!-- try writing out the requirements first-->
   </form>
-
   </main>
   <footer>
     <!-- change to your name-->
