removed head + main tag with the content from MultiPage clone and added to wireframe file. (undoing my past mistake).

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- Add your HTML markup here -->
+    <head>
+      <h1>WireFrame</h1>
+    </head>
+    <main>
+      <p>
+        A website wireframe, also known as a page schematic or screen blueprint,
+        is a visual guide that represents the skeletal framework of a website
+        (<a href="https://en.wikipedia.org/wiki/Website_wireframe"
+          >Wikipedia)</a
+        >
+      </p>
+    </main>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-</body>
+  </body>
 </html>
