Add Footer Section
Create the footer section

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -18,10 +18,10 @@
   <header>
     <h1>Version Control System</h1>
     <p>Version control, also known as source control, is the practice of tracking and managing changes to software
-      code.<br>
-      Version control systems (VCS ) are software tools that help software teams manage changes to source code over
-      time.<br>
-      VCS tools have seen great improvements over the past few decades and some are better than others.
+      code.
+    Version control systems (VCS ) are software tools that help software teams manage changes to source code over
+      time.
+    VCS tools have seen great improvements over the past few decades and some are better than others.
       One of the most popular VCS tools in use today is called <strong><em>Git</em></strong>.
     </p>
   </header>
@@ -57,6 +57,13 @@
     </div>
 
   </main>
+   <!-- Footer Section -->
+   <footer>
+    <p>Learning and Exploring Web Development Skills at Code Your Future.</p>
+    <b>
+    <p>&copy 2024</p>
+  </b>
+</footer>
 
 </body>
 
