Added semantic markup

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
+    <header>
+      <h1> Well come to Wireframe</h1>
+      <nav>
+          <ul>
+              <li>Home</li>
+              <li>About</li>
+              <li>Services</li>
+              <li>Contact</li>
+          </ul>
+      </nav>
+  </header>
+  <main>
+    <section>
+      <h2>Well come to My Website</h2>
+      <p>I am Forogh</p>
+    </section>
+  </main>
+<!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+
+   
 </body>
-</html
+</html>
