created the git page header

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <header>
+      <h1>All about Git💻</h1>
+      <p>Git is a tool that helps you keep track of changes to files, especially code. It’s like a "save" button, but smarter! lets you see who changed what and when, and even go back to old versions if needed.</p>
+    </header>
 </body>
 </html
