laid out the basic layout of the git page

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -11,5 +11,31 @@
       <h1>All about Git💻</h1>
       <p>Git is a tool that helps you keep track of changes to files, especially code. It’s like a "save" button, but smarter! lets you see who changed what and when, and even go back to old versions if needed.</p>
     </header>
+
+    <main>
+
+      <article>
+        <h2>What is Git?</h2>
+        <p>Git is a tool that helps you track changes to files, especially when you're working on code. Think of it like a super-powered "undo" button that lets you go back to any point in your project’s history. It’s also great for working with others because it lets everyone make changes at the same time without overwriting each other's work. Git is widely used by developers to manage code, but it can be used for any project where you need to keep track of changes.</p>
+        <p>By far, the most widely used modern version control system in the world today is Git. Git is a mature, actively maintained open source project originally developed in 2005 by Linus Torvalds, the famous creator of the Linux operating system kernel.
+        </p>
+        <button><a href="https://www.atlassian.com/git/tutorials/what-is-git">Read More</a></button>
+      </article>
+    <section>
+      <article>
+        <h2>Why do developers need Git?</h2>
+        <p>For developers, it eliminates everything from the time wasted passing commits over a network connection to the man hours required to integrate changes in a centralized version control system. It even makes better use of junior developers by giving them a safe environment to work in.</p>
+        <button><a href="https://www.atlassian.com/git/tutorials/why-git#:~:text=Git%20is%20all%20about%20efficiency,safe%20environment%20to%20work%20in.">Read More</a></button>
+      </article>
+      <article>
+        <h2>What is a branch in Git?</h2>
+        <p>FGit branches are effectively a pointer to a snapshot of your changes. When you want to add a new feature or fix a bug—no matter how big or how small—you spawn a new branch to encapsulate your changes. T</p>
+        <button><a href="https://www.atlassian.com/git/tutorials/using-branches#:~:text=Git%20branches%20are%20effectively%20a,branch%20to%20encapsulate%20your%20changes.">Read More</a></button>
+      </article>
+    </section>
+    </main>
+    <footer>
+      To learn more about Git from a pro contact Serna Malala @ sm.sernamalala@gmail.com
+    </footer>
 </body>
 </html
