Added header section with title and description in wireframe

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-</body>
-</html
+    <header>
+      <div>
+        <h1>Wireframe</h1>
+        <p>Discover the basics of Git, a powerful version control system used by developers to manage code, collaborate efficiently, and track changes across projects.</p>
+      </div>
+    </header>
+  </body>
+</html>
+
