made changes to the header and made the layout much neater, added some differnt CSS rules and some colour as well

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -22,7 +22,7 @@
         </p>
         <button><a href="https://www.atlassian.com/git/tutorials/what-is-git">Read More</a></button>
       </article>
-    <section>
+    <section id="second-part">
       <article>
         <h2>Why do developers need Git?</h2>
         <img src="./images/user.png" alt="">
