Add section 'What is Git?'

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -13,6 +13,23 @@
         <p>Discover the basics of Git, a powerful version control system used by developers to manage code, collaborate efficiently, and track changes across projects.</p>
       </div>
     </header>
+
+    <main>
+      <section>
+        <h2>What is Git?</h2>
+        <p>Git is a distributed version control system that helps developers track changes in their code, collaborate with others, and maintain multiple versions of their projects.</p>
+        <a href="#git-details" class="button">Read more</a>
+      </section>
+      
+    </main>
+
+    <footer>
+      <p>&copy; 2024 Wireframe Inc.</p>
+      <nav>
+        <a href="#contact">Contact</a> | <a href="#terms">Terms of Service</a>
+      </nav>
+    </footer>
+
   </body>
 </html>
 
