Add section 'Why do developers need Git?'

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -20,6 +20,11 @@
         <p>Git is a distributed version control system that helps developers track changes in their code, collaborate with others, and maintain multiple versions of their projects.</p>
         <a href="#git-details" class="button">Read more</a>
       </section>
+      <section>
+        <h2>Why do developers need Git?</h2>
+        <p>Git allows developers to work in parallel, manage different features, and ensures that code integrity is maintained through version control.</p>
+        <a href="#why-git" class="button">Read more</a>
+      </section>
       
     </main>
 
