--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -25,7 +25,11 @@
         <p>Git allows developers to work in parallel, manage different features, and ensures that code integrity is maintained through version control.</p>
         <a href="#why-git" class="button">Read more</a>
       </section>
-      
+      <section>
+        <h2>What is a branch in Git?</h2>
+        <p>A branch in Git is an independent line of development. Developers can create branches to work on new features without affecting the main codebase.</p>
+        <a href="#branch" class="button">Read more</a>
+      </section>
     </main>
 
     <footer>
