Updated heading and title

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My form exercise</title>
+  <title>Form Control</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Product Pick Form</h1>
+    <h1>Product Pick</h1>
   </header>
   <main>
   <div class="container">
@@ -52,8 +52,8 @@
       <label>
         Delivery Date:
       </label>
-      <input type="date" name="delivery" required>
-      <button type="submit">Submit</button> <br />
+      <input type="date" name="delivery" required><br /><br />
+      <button type="submit">Submit</button> 
     </fieldset>
     </div>
     <!-- try writing out the requirements first-->
