--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,30 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
 
   <main>
+    <div class="wrapper">
     <header>
-      <h1>What is Git?</h1>
+      <h1>Benefits and features of GitHub</h1>
       <p>Git is the most commonly used version control system. Git tracks the changes you make to files, so you have a record of what has been done, and you can revert to specific versions should you ever need to. Git also makes collaboration easier, allowing changes by multiple people to all be merged into one source. </p>
     </header>
 
-    <body>
-      <section>
-      <article>
+   
+      <section class="columns">
+      <article class="column">
         <h2>What is Git?</h2>
         <p>By far, the most widely used modern version control system in the world today is Git. Git is a mature, actively maintained open source project originally developed in 2005 by Linus Torvalds, the famous creator of the Linux operating system kernel.
           A staggering number of software projects rely on Git for version control, including commercial projects as well as open source. Developers who have worked with Git are well represented in the pool of available software development talent and it works well on a wide range of operating systems and IDEs (Integrated Development Environments).
           Having a distributed architecture, Git is an example of a DVCS (hence Distributed Version Control System). Rather than have only one single place for the full version history of the software as is common in once-popular version control systems like CVS or Subversion (also known as SVN), in Git, every developer's working copy of the code is also a repository that can contain the full history of all changes. 
           In addition to being distributed, Git has been designed with performance, security and flexibility in mind.
           </p>
+          <a href="https://www.techtarget.com/searchitoperations/definition/GitHub" class="button">Read More</a>
 
-      </article>
-    </section>
-
-    <section>
-      <article>
+        </article>
+    
+      <article class="column">
         <h2>Why do developers need Git?</h2>
         <ul>
           <li>Git is the most widely used version control system, enabling tracking of changes to files and easier collaboration among multiple users.</li>
@@ -37,26 +40,20 @@
           <li> Online hosts such as GitHub and Bitbucket can be used for storing a copy of the Git repository, enabling smoother collaboration with other developers.</li>
           <li>Git also supports branching and merging, allowing concurrent development workflows and providing robust tools for handling conflicts during merges.</li>
         </ul>
-        </p>
+        <a href="https://www.atlassian.com/git/tutorials/why-git#:~:text=Git%20is%20all%20about%20efficiency,safe%20environment%20to%20work%20in." class="button">Read More</a>
       </article>
-    </section>
-
-    <section>
-      <article>
+    
+      <article class="column">
         <h2>What is a branch in Git?</h2>
         <p>Git branches are effectively a pointer to a snapshot of your changes. When you want to add a new feature or fix a bug—no matter how big or how small—you spawn a new branch to encapsulate your changes. This makes it harder for unstable code to get merged into the main code base, and it gives you the chance to clean up your future's history before merging it into the main branch.</p>
+        <a href="https://www.w3schools.com/GIT/git_branch.asp" class="button">Read More</a>
       </article>
+    </div>
     </section>
 
-
-
-
-
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
 </main>
 <footer>
-
+  <div class="footer">By Azharuddin Meyer. Copyright © 2024 All Rights Reserved.</div>
 </footer>
 </html>
