--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -51,7 +51,14 @@
 
   </body>
   <footer>
-  <h1>published by Azar Alampanah</h1>
-  <p></p>
+    <h1>published by Azar Alampanah</h1>
+    <section id="footer">
+     <img id="contact" src="image/email.jpg" alt="email icon">
+     <p>azaralampanah2@gmail.com</p>
+    </section>
+    <section id="footer">
+      <img id="contact" src="image/linkedin.jpg" alt="linkedin icon">
+      <p> https://www.linkedin.com/in/azar-alampanah-a9a71a279/ </p>
+    </section>
   </footer>
 </html>
