changinh branch image

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -37,8 +37,12 @@
           <article class="article2">
             <img src="image/branch.jpg" alt="branching in vs code and git hub">
             <h1>What is a branch in Git?</h1>
-            <p> a branch is Used to work on different parts of a project without impacting the main branch.
-            Represents an independent line of development. Allows you to isolate development work from other branches in the repository</p>
+            <p> . a branch is used to work on different parts of a project without impacting the main branch</p>
+            <p>. Represents an independent line of development</p>
+            <p>. Allows you to isolate development work from other branches in the repository</p>
+            <p> . a branch is used to work on different parts of a project without impacting the main branch</p>
+            <p>. Represents an independent line of development</p>
+            <p>. Allows you to isolate development work from other branches in t
             <button>
             <a href=" https://www.bing.com/search?pglt=43&q=what+is+branch+in+github&cvid=61cf241d0ae14ab3bd72d7023835aa70&gs_lcrp=EgZjaHJvbWUqBg
                  gAEAAYQDIGCAAQABhAMgYIARBFGDkyBggCEAAYQDIGCAMQABhAMgYIBBAAGEAyBggFEAAYQDIGCAYQABhAMgYIBxAAGEAyBggIEAAYQNIBCDYxNTZqMGoxqAIIsAIB&FORM=ANNTA1&adppc=EDGEESS&PC=HCTS">Read More</a>    
@@ -51,14 +55,15 @@
 
   </body>
   <footer>
-    <h1>published by Azar Alampanah</h1>
-    <section id="footer">
-     <img id="contact" src="image/email.jpg" alt="email icon">
-     <p>azaralampanah2@gmail.com</p>
-    </section>
-    <section id="footer">
+    <h2>published by Azar Alampanah</h2>
+    <section id="last">
       <img id="contact" src="image/linkedin.jpg" alt="linkedin icon">
-      <p> https://www.linkedin.com/in/azar-alampanah-a9a71a279/ </p>
+      <p><a href="https://www.linkedin.com/in/azar-alampanah-a9a71a279/">https://www.linkedin.com/in/azar-alampanah-a9a71a279/</a></p>
     </section>
+    <section id="last">
+     <img id="contact" src="image/email.jpg" alt="email icon">
+     <p><a href="https://outlook.office.com/">azaralampanah2@gmail.com</a></p>
+    </section>
+    
   </footer>
 </html>
