Adding title and description to the header

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/style.css" />  
   </head>
   <body>
-    <header>
+    <main>
+    <header> <H1> GIT </H1><P>In this article,we are going to learn about <b>GIT</b> and its <b>function</b>.</P>
       <article>
-      <h1>What is Git?</h1>
+        <h1>What is Git?</h1>
         <p>
           Git is a distributed version control system that allows developers to
           track changes in their code and collaborate on projects efficiently.
@@ -25,13 +26,31 @@
           with new features without affecting the main codebase. Its
           decentralized nature means that every contributor has a full copy of
           the repository, enhancing collaboration and minimizing the risk of
-          data loss.</p>
+          data loss.
+        </p>
       </article>
       <article>
         <h1>What is a branch in Git?</h1>
         <p> In Git, a branch is a new/separate version of the main repository.</p>
       </article>
     </header>
+</main>
+
+<footer>
+  <div class="footer-container">
+      <!-- Social Links Column -->
+      <div class="footer-column footer-social">
+       <h3>Follow Us</h3>
+        <a href="https://github.com/" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+        <a href="https://instagram.com/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://facebook.com/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com/" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+      </div>
+
+  </div>
+
+</footer>
+
   </body> 
 
     <!-- Add your HTML markup here -->
