--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+      <h1>Github</h1>
+      <p>GitHub is a cloud-based platform that uses Git for version control and collaboration. It provides a space where developers can host their Git repositories, collaborate on projects, and share code with others.</p>
+    </header>
     <article>
         <h2>What is Git?</h2>
         <p> is a distributed version control system (DVCS) that helps developers track changes to code, collaborate efficiently, and maintain different versions of a project. It allows teams to work simultaneously on the same codebase without overwriting each other’s work. By keeping a complete history of changes, Git makes it easy to revert to previous versions and work offline. It also supports code reviews and ensures code quality by enabling collaborative workflows.</p>
