--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -26,6 +26,7 @@
         <p>A branch in Git is an isolated version of the repository where developers can work on new features, bug fixes, or experiments. Branches help in maintaining a stable main codebase while allowing independent development. Once changes are finalized, the branch can be merged back into the main project. This approach ensures that experimental work doesn’t affect production code until it’s ready.</p>
 
     </article>
+    <footer></footer>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
