commit article titles

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,20 +12,23 @@
       <p>GitHub is a cloud-based platform that uses Git for version control and collaboration. It provides a space where developers can host their Git repositories, collaborate on projects, and share code with others.</p>
     </header>
     <article>
-        <h2>What is Git?</h2>
-        <p> is a distributed version control system (DVCS) that helps developers track changes to code, collaborate efficiently, and maintain different versions of a project. It allows teams to work simultaneously on the same codebase without overwriting each other’s work. By keeping a complete history of changes, Git makes it easy to revert to previous versions and work offline. It also supports code reviews and ensures code quality by enabling collaborative workflows.</p>
+      <article title="git-dfn">
+          <h2>What is Git?</h2>
+          <p> is a distributed version control system (DVCS) that helps developers track changes to code, collaborate efficiently, and maintain different versions of a project. It allows teams to work simultaneously on the same codebase without overwriting each other’s work. By keeping a complete history of changes, Git makes it easy to revert to previous versions and work offline. It also supports code reviews and ensures code quality by enabling collaborative workflows.</p>
+      </article>
+
+      <article title="git-uses">
+          <h2>Why do developers need Git</h2>
+          <p>Developers need Git because it enhances teamwork, provides a backup of the codebase, and makes it easier to track changes. It supports branching and merging, which allows developers to work on separate features or fixes without affecting the main project. This means parallel development can happen without interference.</p>
+      </article>
+
+      <article title="git-branch">
+          <h2>What is a branch in Git?</h2>
+          <p>A branch in Git is an isolated version of the repository where developers can work on new features, bug fixes, or experiments. Branches help in maintaining a stable main codebase while allowing independent development. Once changes are finalized, the branch can be merged back into the main project. This approach ensures that experimental work doesn’t affect production code until it’s ready.</p>
+
+      </article>
     </article>
 
-    <article>
-        <h2>Why do developers need Git</h2>
-        <p>Developers need Git because it enhances teamwork, provides a backup of the codebase, and makes it easier to track changes. It supports branching and merging, which allows developers to work on separate features or fixes without affecting the main project. This means parallel development can happen without interference.</p>
-    </article>
-
-    <article>
-        <h2>What is a branch in Git?</h2>
-        <p>A branch in Git is an isolated version of the repository where developers can work on new features, bug fixes, or experiments. Branches help in maintaining a stable main codebase while allowing independent development. Once changes are finalized, the branch can be merged back into the main project. This approach ensures that experimental work doesn’t affect production code until it’s ready.</p>
-
-    </article>
     <footer>
       <p>Author: Ruei Ruei<br>
         <a href="mailto:ruei@gmail.com">ruei@gmail.com</a>
